--- a/register.html
+++ b/register.html
@@ -24,36 +24,38 @@
                                             <div class="form-row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label class="small mb-1" for="inputFirstName">First Name</label>
-                                                        <input class="form-control py-4" id="inputFirstName" type="text" placeholder="Enter first name" />
+                                                        <label class="small mb-1" for="inputFirstName">Nombre</label>
+                                                        <input class="form-control py-4" id="nombre" type="text" placeholder="Enter first name" />
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label class="small mb-1" for="inputLastName">Last Name</label>
-                                                        <input class="form-control py-4" id="inputLastName" type="text" placeholder="Enter last name" />
+                                                        <label class="small mb-1" for="inputLastName">Apellido</label>
+                                                        <input class="form-control py-4" id="apellido" type="text" placeholder="Enter last name" />
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                                <input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" />
+                                                <label class="small mb-1" for="inputEmailAddress">Fecha de nacimiento</label>
+                                                <input class="form-control py-4" id="fecha" type="text" placeholder="Enter fecha de nacimiento" />
                                             </div>
-                                            <div class="form-row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="small mb-1" for="inputPassword">Password</label>
-                                                        <input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" />
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label class="small mb-1" for="inputConfirmPassword">Confirm Password</label>
-                                                        <input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" />
-                                                    </div>
-                                                </div>
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="inputEmailAddress">Sexo</label>
+                                                <input class="form-control py-4" id="sexo" type="text" placeholder="Enter sexo" />
                                             </div>
-                                            <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block" href="login.html">Create Account</a></div>
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="inputEmailAddress">Nombre de usuario</label>
+                                                <input class="form-control py-4" id="usuario" type="text" placeholder="Enter nombre de usuario" />
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="inputEmailAddress">Contraseña</label>
+                                                <input class="form-control py-4" id="contrasena" type="password" placeholder="Enter password" />
+                                            </div>
+                                            <div class="form-group">
+                                                <label class="small mb-1" for="inputEmailAddress">Telefono</label>
+                                                <input class="form-control py-4" id="telefono" type="text" placeholder="Enter telefono" />
+                                            </div>
+                                            <div class="form-group mt-4 mb-0"><a class="btn btn-primary btn-block" onclick="registrar()">Create Account</a></div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
@@ -65,6 +67,28 @@
                     </div>
                 </main>
             </div>
+
+            
+            <script>
+                function registrar(){
+                    let xhr = new XMLHttpRequest();
+                    var ruta = "https://proyecto2-t1.herokuapp.com/registro_paciente";
+                    let json = JSON.stringify({
+                        nombre: document.getElementById("nombre").value,
+                        apellido: document.getElementById("apellido").value,
+                        fecha_nacimiento: document.getElementById("fecha").value,
+                        sexo: document.getElementById("sexo").value,
+                        nombre_usuario: document.getElementById("usuario").value,
+                        contraseña: document.getElementById("contrasena").value,
+                        telefono: document.getElementById("telefono").value,
+                    })
+                    console.log(json)
+                    xhr.open("POST",ruta)
+                    xhr.setRequestHeader('Content-type', 'application/json; charset= utf-8')
+                    xhr.send(json)
+                }
+            </script>
+
             <div id="layoutAuthentication_footer">
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
