--- a/register.html
+++ b/register.html
@@ -59,7 +59,7 @@
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
-                                        <div class="small"><a href="login.html">Have an account? Go to login</a></div>
+                                        <div class="small"><a href="index.html">Have an account? Go to login</a></div>
                                     </div>
                                 </div>
                             </div>
