--- a/solicitar-cita.html
+++ b/solicitar-cita.html
@@ -163,7 +163,7 @@
                 </div>
             </main>
             <script>
-                const url = 'http://localhost:3000/';
+                const url = 'https://proyecto2-t1.herokuapp.com/';
                 const ruta = url + "tiene_cita?id=" + getParametro("id");
                 fetch(ruta)
                     .then((resp) => resp.json())
